--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="title">
-            Quieres ser mi novia?
+            Quieres ser mi prom?
         </div>
 
         <div class="buttons">
